@@ -1,3 +1,9 @@
+2013-02-09  Ilija Kocho  <ilijak@siva.com.mk>
+
+	* include/cyg_type.h: Add CYGBLD_FORCE_INLINE macro to be used
+	to enforce function inlining when compiling with no optimization.
+	[ Bugzilla Bug 1001759 ]
+
 2012-03-06  Grant Edwards  <grant.b.edwards@gmail.com>
 
 	* include/cyg_type.h: Add CYGBLD_ATTRIB_UNUSED macro to be used to
